"changed models and fixed tickets controller"
