# routes/swagger.js
@@ -2,6 +2,10 @@ const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.get(
+    '/api-docs',
+    swaggerUi.setup(swaggerDocument)
+    // #swagger.ignore = true
+);
 
 module.exports = router;
